--- a/charts/pg/templates/pgadmin_service.yaml
+++ b/charts/pg/templates/pgadmin_service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "fwv_central_api_chart.fullname" . }}-pgadmin
+  name: {{ include "fwv-central-api-chart.fullname" . }}-pgadmin
 spec:
   type: {{ .Values.pgadmin.service.type | default "ClusterIP" }}
   ports:
@@ -9,4 +9,4 @@ spec:
       targetPort: 80
       protocol: TCP
   selector:
-    app: {{ include "fwv_central_api_chart.name" . }}-pgadmin
+    app: {{ include "fwv-central-api-chart.name" . }}-pgadmin
