--- a/charts/pg/templates/postgres-pvc.yaml
+++ b/charts/pg/templates/postgres-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ include "fwv_central_api_chart.fullname" . }}-postgres-pvc
+  name: {{ include "fwv-central-api-chart.fullname" . }}-postgres-pvc
 spec:
   accessModes: {{ .Values.postgresdb.storage.accessModes }}
   resources:
