--- a/charts/pg/values.yaml
+++ b/charts/pg/values.yaml
@@ -35,3 +35,32 @@ pgadmin:
 
   service:
     type: NodePort
+
+fwvconsumer:
+  replicaCount: 1
+
+  image: 
+    repository: flikweertvision/fv_consumer
+    tag: latest
+    pullPolicy: IfNotPresent
+  
+  environment:
+    pg_db_host: postgresdb
+    pg_db_user: postgres
+    pg_db_password: "Password1!"
+    pg_db_port: 5432
+    pg_db_name: postgres
+    mssql_db_host: ""
+    mssql_db_user: ""
+    mssql_db_password: "" 
+    mssql_db_database: "" 
+    mssql_db_port: ""
+    rmq_username: "consumer"
+    rmq_password: "consumer"
+    rmq_host: rmq
+    rmq_port: 5672
+
+  volumeMount:
+    backupPath: "/backups"
+    pvcName: "nas-backup-pvc"  # PVC name for backup volume
+
