--- a/charts/pg/templates/persistentvolumes.yaml
+++ b/charts/pg/templates/persistentvolumes.yaml
@@ -1,42 +1,42 @@
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: nas-backup
-spec:
-  capacity:
-    storage: 5Gi
-  accessModes:
-    - ReadWriteMany
-  nfs:
-    path: "/configuratie-server/backup"
-    server: "192.168.1.5"
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: nas-backup
+# spec:
+#   capacity:
+#     storage: 5Gi
+#   accessModes:
+#     - ReadWriteMany
+#   nfs:
+#     path: "/configuratie-server/backup"
+#     server: "192.168.1.5"
 
----
+# ---
 
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: plc-backup
-spec:
-  capacity:
-    storage: 5Gi
-  accessModes:
-    - ReadWriteMany
-  nfs:
-    path: "/configuratie-server/plc_backup"
-    server: "192.168.1.5"
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: plc-backup
+# spec:
+#   capacity:
+#     storage: 5Gi
+#   accessModes:
+#     - ReadWriteMany
+#   nfs:
+#     path: "/configuratie-server/plc_backup"
+#     server: "192.168.1.5"
 
----
+# ---
 
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: plc-update
-spec:
-  capacity:
-    storage: 5Gi
-  accessModes:
-    - ReadWriteMany
-  nfs:
-    path: "/configuratie-server/plc_update"
-    server: "192.168.1.5"
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: plc-update
+# spec:
+#   capacity:
+#     storage: 5Gi
+#   accessModes:
+#     - ReadWriteMany
+#   nfs:
+#     path: "/configuratie-server/plc_update"
+#     server: "192.168.1.5"
