--- a/charts/pg/templates/fwvconsumer_deployment.yaml
+++ b/charts/pg/templates/fwvconsumer_deployment.yaml
@@ -49,4 +49,4 @@ spec:
             - name: RMQ_PORT
               value: "{{ .Values.fwvconsumer.environment.rmq_port }}"
       imagePullSecrets:
-        - name: regcred    
+        - name: flikweert-vision
