--- a/charts/pg/templates/pgadmin_service.yaml
+++ b/charts/pg/templates/pgadmin_service.yaml
@@ -8,6 +8,6 @@ spec:
     - port: 80
       targetPort: 80
       protocol: TCP
-      nodePort: 32500
+      nodePort: {{.Values.pgadmin.hostPort}}
   selector:
     app: {{ include "fwv-central-api-chart.name" . }}-pgadmin
