--- a/charts/pg/templates/fwvapi/fwvapi_deployment.yaml
+++ b/charts/pg/templates/fwvapi/fwvapi_deployment.yaml
@@ -50,5 +50,7 @@ spec:
               value: "{{ .Values.fwvapi.environment.rmq_port }}"
             - name: SECRET_KEY
               value: "{{ .Values.fwvapi.environment.SECRET_KEY }}"
+        ports:
+            - containerPort: 5001
       imagePullSecrets:
         - name: flikweert-vision
