--- a/charts/pg/templates/postgresdb/postgres_deployment.yaml
+++ b/charts/pg/templates/postgresdb/postgres_deployment.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "fwv-central-api-chart.fullname" . }}-postgres
+  name: {{ include "fwv-central-api-chart.fullname" . }}-postgresdb
   labels:
     app: {{ include "fwv-central-api-chart.name" . }}
 spec:
   replicas: {{ .Values.postgresdb.replicaCount }}
   selector:
     matchLabels:
-      app: {{ include "fwv-central-api-chart.name" . }}-postgres
+      app: {{ include "fwv-central-api-chart.name" . }}-postgresdb
   template:
     metadata:
       labels:
-        app: {{ include "fwv-central-api-chart.name" . }}-postgres
+        app: {{ include "fwv-central-api-chart.name" . }}-postgresdb
     spec:
       containers:
         - name: postgres
@@ -31,4 +31,4 @@ spec:
       volumes:
         - name: postgres-storage
           persistentVolumeClaim:
-            claimName: {{ include "fwv-central-api-chart.fullname" . }}-postgres-pvc
+            claimName: {{ include "fwv-central-api-chart.fullname" . }}-postgresdb-pvc
