--- a/charts/pg/templates/fwvapi/fwvapi_deployment.yaml
+++ b/charts/pg/templates/fwvapi/fwvapi_deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: {{ .Release.Name }}-fwvapi
   labels:
-    app: fwvapi
+    app: {{ include "fwv-central-api-chart.name" . }}
 spec:
   replicas: {{ .Values.fwvapi.replicaCount }}
   selector:
