--- a/charts/pg/templates/pgadmin/pgadmin_service.yaml
+++ b/charts/pg/templates/pgadmin/pgadmin_service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "fwv-central-api-chart.fullname" . }}-pgadmin
+  name: {{ include "fwv-central-api-chart.fullname" . }}-pgadmin-service
 spec:
-  type: {{ .Values.pgadmin.service.type | default "ClusterIP" }}
+  type: NodePort
   ports:
-    - port: 80
+    - port: 5050
       targetPort: 80
       protocol: TCP
       nodePort: {{.Values.pgadmin.hostPort}}
