--- a/charts/pg/templates/prometheus/prometheus_deployment.yaml
+++ b/charts/pg/templates/prometheus/prometheus_deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: {{ .Release.Name }}-prometheus
   labels:
-    app: prometheus
+    app: {{ include "fwv-central-api-chart.name" . }}
 spec:
   replicas: {{ .Values.prometheus.replicaCount }}
   selector:
