--- a/charts/pg/templates/rabbitmq/rabbitmq_service.yaml
+++ b/charts/pg/templates/rabbitmq/rabbitmq_service.yaml
@@ -3,12 +3,18 @@ kind: Service
 metadata:
   name: {{ include "fwv-central-api-chart.fullname" . }}-rabbitmq
 spec:
-  type: {{ .Values.rabbitmq.service.type | default "ClusterIP" }}
+  type: NodePort
   ports:
-    - name: http_api
+    - name: http-api
       port: 15672
       targetPort: 15672
       protocol: TCP
       nodePort: {{.Values.rabbitmq.hostPort}}
+    - name: amqp-client
+      port: 5672
+      targetPort: 15672
+      protocol: TCP
+      nodePort: {{.Values.rabbitmq.hostPort}}
+    
   selector:
     app: {{ include "fwv-central-api-chart.name" . }}-rabbitmq
